html page added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div>Heading HTML</div>
+    <div>
+        <h2>Login Page</h2>
+        <div>
+            <input type="text" name="userName" id="userName" placeholder="userName" />
+            <input type="text" name="password" id="password" placeholder="password" />
+
+        </div>
+    </div>
 </body>
+
 </html>
+
+<!-- ctrl+~ -->
