--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 </head>
 
 <body>
-    <div>
-        <h2>Login Page</h2>
-        <div>
-            <input type="text" name="userName" id="userName" placeholder="userName" />
-            <input type="text" name="password" id="password" placeholder="password" />
-
-        </div>
-    </div>
+    <div class="layer1"> 
+        <div class="layer2">
+    <form  action="/action.in" class="loginUi">
+        <h4 class="heading">Login To Your Account</h4>
+        <input type="text" class="username" placeholder="  Enter User ID" name="user">
+        <input type="password" class="password" placeholder="  Enter Password" name="pass">
+        <button type="submit" class="btn">Login</button>
+    </form>
+</div>
+</div>
 </body>
 
 </html>
-
-<!-- ctrl+~ -->
