--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
         <div class="layer2">
     <form  action="/action.in" class="loginUi">
         <h4 class="heading">Login To Your Account</h4>
-        <input type="text" class="username" placeholder="  Enter User ID" name="user">
-        <input type="password" class="password" placeholder="  Enter Password" name="pass">
+        <input type="text" id="user" placeholder="  Enter User ID" name="user">
+        <input type="password" id="pass" placeholder="  Enter Password" name="pass">
         <button type="submit" class="btn">Login</button>
     </form>
 </div>
 </div>
+<script src="data.js"></script>
 </body>
 
 </html>
